fix: padding on mobile resume page

--- a/src/components/Resume/style.css
+++ b/src/components/Resume/style.css
@@ -142,6 +142,8 @@
 @media (max-width: 560px) {
   .resume {
     padding-top: 36px;
+    padding-left: 16px;
+    padding-right: 16px;
   }
   .resume__name {
     max-width: 250px;
